# crud-python

./: .gitignore  README.md  docker-compose.yml  setup.py
.github/workflows/: build.yml  cd-pipeline.yml  cd.yml  ci-pipeline.yml  setup.yml  validate.yml
docs/examples/: diagram.drawio
docs/guides/: ARCHITECTURE.md  CONTRIBUTING.md  SECURITY.md
infrastructure/nginx/: nginx.conf
scripts/: load_env.ps1
scripts/python/: api.py  consume.py  ps-import.py  publish.py
scripts/sql/Postgres/: PostgreSQL.sql  postgresql.conf
src/: Dockerfile  app.py  data.json  models.py  pyproject.toml  requirements.txt  run.py
src/api/: __init__.py  exceptions.py  items.py  routes.py
src/app/: __init__.py  metrics.py
src/config/: __init__.py  config.py
src/static/: script.js  styles.css
src/templates/: index.html
src/tests/ci/: test_root_ci.py
src/tests/development/: conftest.py  test_app.py  test_root.py  test_routes.py  test_secrets.py
src/utils/: database_utils.py  log_utils.py  rabbitmq_utils.py  secrets_utils.py
